; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/extr_wwrap.c_zfLnxPutUsbRxBuffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/extr_wwrap.c_zfLnxPutUsbRxBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.usbdrv_private* }
%struct.usbdrv_private = type { i32, i32, i32, i32, i32** }

@ZM_MAX_RX_URB_NUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"RxBufQ inconsistent: RxBufHead: %d, RxBufTail: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfLnxPutUsbRxBuffer(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.usbdrv_private*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.usbdrv_private*, %struct.usbdrv_private** %10, align 8
  store %struct.usbdrv_private* %11, %struct.usbdrv_private** %6, align 8
  %12 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %13 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %12, i32 0, i32 2
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %17 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = add nsw i32 %18, 1
  %20 = load i32, i32* @ZM_MAX_RX_URB_NUM, align 4
  %21 = sub nsw i32 %20, 1
  %22 = and i32 %19, %21
  store i32 %22, i32* %7, align 4
  %23 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %24 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @ZM_MAX_RX_URB_NUM, align 4
  %27 = icmp ne i32 %25, %26
  br i1 %27, label %28, label %45

28:                                               ; preds = %2
  %29 = load i32*, i32** %5, align 8
  %30 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %31 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %30, i32 0, i32 4
  %32 = load i32**, i32*** %31, align 8
  %33 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %34 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32*, i32** %32, i64 %36
  store i32* %29, i32** %37, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %40 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 8
  %41 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %42 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %42, align 4
  br label %57

45:                                               ; preds = %2
  %46 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %47 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %46, i32 0, i32 3
  %48 = load i32, i32* %47, align 4
  %49 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %50 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @printk(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %48, i32 %51)
  %53 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %54 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %53, i32 0, i32 2
  %55 = load i64, i64* %8, align 8
  %56 = call i32 @spin_unlock_irqrestore(i32* %54, i64 %55)
  store i32 65535, i32* %3, align 4
  br label %62

57:                                               ; preds = %28
  %58 = load %struct.usbdrv_private*, %struct.usbdrv_private** %6, align 8
  %59 = getelementptr inbounds %struct.usbdrv_private, %struct.usbdrv_private* %58, i32 0, i32 2
  %60 = load i64, i64* %8, align 8
  %61 = call i32 @spin_unlock_irqrestore(i32* %59, i64 %60)
  store i32 0, i32* %3, align 4
  br label %62

62:                                               ; preds = %57, %45
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @printk(i8*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
